Update config files

--- a/vinotes/config/nginx.conf
+++ b/vinotes/config/nginx.conf
@@ -1,19 +1,22 @@
+# Redirect requests for www.api.vinot.es to api.vinot.es
 server {
     listen 80;
     server_name www.api.vinot.es;
     return 301 $scheme://api.vinot.es$request_uri;
 }
 
+# Pass all requests for api.vinot.es to Django project
 server {
     listen 80;
     server_name api.vinot.es;
     root /home/rc/projects/vinotes-api/vinotes;
 
     location / {
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_pass http://localhost:8002;
+        proxy_pass http://localhost:8001;
     }
 }
